[gd_scene load_steps=3 format=3 uid="uid://zfccnoam4qnp9"]

[ext_resource type="Script" uid="uid://llq4ealzo0w4u" path="res://algorithms/wfc/corridor_tileset.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ppvi6v3j53hi3" path="res://algorithms/wfc/wfc_grid_3d.tscn" id="2"]

[node name="CorridorTest" type="Node3D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 8, 14.9399, 15.5168)
current = true

[node name="WFCGrid3D" parent="." instance=ExtResource("2")]
grid_width = 12
grid_height = 3
grid_depth = 12
animate_generation = true
animation_speed = 0.03

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 15, 0)
light_color = Color(1, 0.95, 0.9, 1)
light_energy = 1.2
shadow_enabled = true

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.5, -0.75, -0.433013, 0, 0.5, -0.866025, 0.866025, -0.433013, -0.25, 0, 10, 0)
light_color = Color(0.7, 0.8, 1, 1)
light_energy = 0.4

[connection signal="generation_complete" from="WFCGrid3D" to="." method="_on_generation_complete"]
[connection signal="generation_started" from="WFCGrid3D" to="." method="_on_generation_started"]
